--- a/f&r/new-form.html
+++ b/f&r/new-form.html
@@ -1995,7 +1995,9 @@ else{
 }
 html[i+2]=inhtml
         }
-        return html
+        var jhtml = JSON.stringify(html)
+        sessionStorage.setItem("backuphtml",jhtml);
+       
     }
 /*setInterval(() => {
   if (crestatus !=="Creating"){
