--- a/f&r/edit-form.html
+++ b/f&r/edit-form.html
@@ -79,8 +79,8 @@ function togglePopup3(){
 </script>
 <script>
     const keyvaluess = window.location.search;
-     const values = new URLSearchParams(keyvalues);
-     const formnam = value.get('form');
+     const values = new URLSearchParams(keyvaluess);
+     const formnam = values.get('form');
    function getdata(){
 const url = "https://script.google.com/macros/s/AKfycbzWuDO7Jim8pRJZ2MXPUQrCxcUsLhNZphuA5PGDQFfk7QVkSIy5QktQKcZh3KGL-91H/exec" 
 var val = formnam;
