--- a/f&r/edit-form.html
+++ b/f&r/edit-form.html
@@ -94,6 +94,7 @@ fetch(`${url}?header=${val}`)
    })
    .catch((error) => console.error('!!!!!!!!', error));
 }
+getdata()
 </script>
 </head>
 <body>
