--- a/f&r/edit-form.html
+++ b/f&r/edit-form.html
@@ -731,6 +731,7 @@ else if (html[j+2][1]=="File Upload"){
     btn[a].checked =true;
   }
   }
+  formDataString0[j].className = html[j+2][5];
 }
   }
 
