--- a/f&r/new-form.html
+++ b/f&r/new-form.html
@@ -1640,8 +1640,8 @@ var loggedname = localStorage.getItem("loggedname");
 console.log(loggedname)
 var formname = document.getElementById("Form Name").value;
 var formdescrip = document.getElementById("Form Description").value;
-var bulidupdetails = await gethtmldata();
-console.log(bulidupdetails)
+var bulidupdetail = await gethtmldata();
+var bulidupdetails = JSON.stringify(bulidupdetail);
 console.log(formname+"=sheetid="+loggedname+"=sheetid="+"Created"+"=sheetid="+formdescrip+"=sheetid="+htmlout+"=sheetid="+htmlheads+"=sheetid="+formfolder+"=sheetid="+folderids)
         // Send a POST request to your Google Apps Script
         fetch(
