--- a/f&r/edit-form.html
+++ b/f&r/edit-form.html
@@ -1608,11 +1608,11 @@ console.log(bulidupdetails)
 console.log(formname+"=sheetid="+loggedname+"=sheetid="+"Created"+"=sheetid="+formdescrip+"=sheetid="+htmlout+"=sheetid="+htmlheads+"=sheetid="+formfolder+"=sheetid="+folderids)
         // Send a POST request to your Google Apps Script
         fetch(
-          "https://script.google.com/macros/s/AKfycbyz_KDA1Kx1srwHeMXXl-UPTS_M0jdaoxh9NXEp8CiXp4qZC-_yGuOzcPjA9M6I99mI/exec",
+          "https://script.google.com/macros/s/AKfycbwoLhkMVxJ6U8oBg4AZLTPCyBgVKLdYEgDDGEj1YEP11LmKfQNGH80MZTbVjtu6fJv7/exec",
           {
             redirect: "follow",
             method: "POST",
-            body: formname+"=sheetid="+loggedname+"=sheetid="+"Created"+"=sheetid="+formdescrip+"=sheetid="+htmlout+"=sheetid="+htmlheads+"=sheetid="+formfolder+"=sheetid="+folderids+"=sheetid="+bulidupdetails,
+            body: formname+"=sheetid="+loggedname+"=sheetid="+"Edited"+"=sheetid="+formdescrip+"=sheetid="+htmlout+"=sheetid="+htmlheads+"=sheetid="+formfolder+"=sheetid="+folderids+"=sheetid="+bulidupdetails+"=sheetid="+formnam,
             headers: {
               "Content-Type": "text/plain;charset=utf-8",
             },
