--- a/f&r/edit-form.html
+++ b/f&r/edit-form.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>New Form</title>
+  <title>Update Form</title>
   <link rel="stylesheet" href="style 3.css">
   <script type="text/javascript" src="app.js" defer></script>
   <link rel="icon" href="white_logo.png" type="image/x-icon">
@@ -173,7 +173,7 @@ function togglePopup3(){
     <iframe name="hiddenConfirm" id="hiddenConfirm" style="display: none;" onload="if(submitted){
         window.location='submifssion.html'; }"></iframe>
         <form style="width: 100%;" id="form" class="container m-4 pl-4" method="POST" onchange="gethtmldata()">
-    <h1 style="text-align: center;"> New Form </h1><br>
+    <h1 style="text-align: center;"> Update Form </h1><br>
     <div id="formdetails">
     <div class="form-element">
     <span class="q">Form Name</span>
@@ -258,8 +258,8 @@ value="Required"
       </div> 
     </section>
     <section class="msg" id="msg" style="display: none;flex-direction: column; align-items: center;justify-content: center;height: 100vh;">
-<h1>Successfully Created</h1><br>
-<p style="color: black;text-align: center;">Thank for creating your form <br>
+<h1>Successfully Updated</h1><br>
+<p style="color: black;text-align: center;"> <br>
 <span  id="finallink"></span></p>
 </section>
 </div>
@@ -1429,7 +1429,7 @@ form.addEventListener('submit',()=>{ {
   
 document.getElementById("form").addEventListener("submit", function (e) {
         e.preventDefault(); // Prevent the default form submission
-        document.getElementById("message").textContent = "Creating Form....";
+        document.getElementById("message").textContent = "Updating Form....";
         document.getElementById("message").style.display = "block";
         document.getElementById("bt").disabled = true;
         createhtml(folidd);
