--- a/f&r/past-forms.html
+++ b/f&r/past-forms.html
@@ -706,6 +706,7 @@ alert("PassKey is already created for this Device")
 <th><b>Expiry Time</b></th>
 <th><b>Status Change</b></th>
 <th><b>Preview Link</b></th>
+<th><b>Edit Form</b></th>
 <th><b>Form Link</b></th>
 <th><b>Response Link</b></th>
 <th><b>Delete</b></th>`
@@ -719,6 +720,7 @@ alert("PassKey is already created for this Device")
 <th><b>Expiry Time</b></th>
 <th><b>Status Change</b></th>
 <th><b>Preview Link</b></th>
+<th><b>Edit Form</b></th>
 <th><b>Form Link</b></th>
 <th><b>Response Link</b></th>
 <th><b>Delete</b></th>`
