--- a/f&r/past-forms.html
+++ b/f&r/past-forms.html
@@ -754,6 +754,7 @@ alert("PassKey is already created for this Device")
        }
        var fornamefinal =  head.split(" ");
        fornamefinal = fornamefinal.join("%20");
+formlink= "https://niftemt-placementcell-forms.pages.dev/form/?form="+fornamefinal
        var editlink= "https://pcniftemt.pages.dev/f&r/edit-form?form="+fornamefinal
        var prelink ="https://pcniftemt.pages.dev/preview-form/?form="+fornamefinal;
        if(formstatus=="Live"){
