--- a/preview-form/index.html
+++ b/preview-form/index.html
@@ -15,7 +15,7 @@ const idvalue = value.get('form');
 
 console.log(idvalue)
 
-document.getElementById("formtitle").textContent=idvalue
+
 </script>
     <link rel="stylesheet" href="style.css" />
     <script>
@@ -99,6 +99,7 @@ document.getElementById("formtitle").textContent=idvalue
             if(data[0]!==null){
 document.getElementById("formquestions").innerHTML=data[1];
 document.getElementById("Form Name").textContent=data[2];
+document.getElementById("formtitle").textContent=data[2];
 console.log(data[3])
 data[3] = data[3].split("\n");
 data[3] = data[3].join("<br>");
