--- a/f&r/edit-form.html
+++ b/f&r/edit-form.html
@@ -1444,7 +1444,7 @@ document.getElementById("form").addEventListener("submit", function (e) {
         window.location = window.location.href;
       }
 async function createfolders(foldername,formfolder){
-  var folderstring =foldername+"/"+formfolder;
+  var folderstring =foldername+"/fol/"+formfolder;
   var folderid = "";
   console.log(folderstring)
   await fetch(
