--- a/f&r/new-form.html
+++ b/f&r/new-form.html
@@ -1487,7 +1487,7 @@ console.log(formdetailstring)
         window.location = window.location.href;
       }
 async function createfolders(foldername,formfolder){
-  var folderstring =foldername+"/"+formfolder;
+  var folderstring =foldername+"/fol/"+formfolder;
   var folderid = "";
   console.log(folderstring)
   await fetch(
