--- a/f&r/new-form.html
+++ b/f&r/new-form.html
@@ -346,7 +346,7 @@ function togglePopup3(){
         <span class="q">Form Description</span>  
   <span oninput="en_span(this)"  style="width: 100%;" class="input-span" contenteditable="true" name="Form Description" id="Form Description"></span>
   <span onclick="dis_span(this)"  class="span-in-place" style="width: 100%;">Enter the Form Description</span>
-  <div style="margin-top: 20px;margin-bottom: -30px;">
+  <div style="margin-top: 20px;margin-bottom: -30px;margin-left: -160px;" class="edit-btns">
       <button onclick="boldtxt(this)" type="button" style="background: none;width: 50px;margin-top: -30px;">
         <svg viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M2 1H8.625C11.0412 1 13 2.95875 13 5.375C13 6.08661 12.8301 6.75853 12.5287 7.35243C13.4313 8.15386 14 9.32301 14 10.625C14 13.0412 12.0412 15 9.625 15H2V1ZM5.5 9.75V11.5H9.625C10.1082 11.5 10.5 11.1082 10.5 10.625C10.5 10.1418 10.1082 9.75 9.625 9.75H5.5ZM5.5 6.25H8.625C9.10825 6.25 9.5 5.85825 9.5 5.375C9.5 4.89175 9.10825 4.5 8.625 4.5H5.5V6.25Z" fill="#0042aa"></path> </g></svg>
     </button>
@@ -401,7 +401,7 @@ function togglePopup3(){
     <div class="form-element" style="width: 47%;">
       <span oninput="en_span(this)"  style="font-weight: lighter;" class="input-span" contenteditable="true" name="Question Description" ></span>
       <span onclick="dis_span(this)" style="font-weight: lighter;" class="span-in-place" >Enter the Question Description</span>
-      <div style="margin-top: 20px;margin-bottom: -50px;">
+      <div style="margin-top: 20px;margin-bottom: -50px;" class="edit-btns">
       <button onclick="boldtxt(this)" type="button" style="background: none;width: 50px;margin-top: -30px;">
         <svg viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M2 1H8.625C11.0412 1 13 2.95875 13 5.375C13 6.08661 12.8301 6.75853 12.5287 7.35243C13.4313 8.15386 14 9.32301 14 10.625C14 13.0412 12.0412 15 9.625 15H2V1ZM5.5 9.75V11.5H9.625C10.1082 11.5 10.5 11.1082 10.5 10.625C10.5 10.1418 10.1082 9.75 9.625 9.75H5.5ZM5.5 6.25H8.625C9.10825 6.25 9.5 5.85825 9.5 5.375C9.5 4.89175 9.10825 4.5 8.625 4.5H5.5V6.25Z" fill="#0042aa"></path> </g></svg>
     </button>
@@ -585,7 +585,7 @@ var newitem =
     <div class="form-element" style="width: 47%;">
       <span oninput="en_span(this)"  style="font-weight: lighter;" class="input-span" contenteditable="true" name="Question Description" ></span>
       <span onclick="dis_span(this)" style="font-weight: lighter;" class="span-in-place" >Enter the Question Description</span>
-      <div style="margin-top: 20px;margin-bottom: -50px;">
+      <div style="margin-top: 20px;margin-bottom: -50px;" class="edit-btns">
       <button onclick="boldtxt(this)" type="button" style="background: none;width: 50px;margin-top: -30px;">
         <svg viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M2 1H8.625C11.0412 1 13 2.95875 13 5.375C13 6.08661 12.8301 6.75853 12.5287 7.35243C13.4313 8.15386 14 9.32301 14 10.625C14 13.0412 12.0412 15 9.625 15H2V1ZM5.5 9.75V11.5H9.625C10.1082 11.5 10.5 11.1082 10.5 10.625C10.5 10.1418 10.1082 9.75 9.625 9.75H5.5ZM5.5 6.25H8.625C9.10825 6.25 9.5 5.85825 9.5 5.375C9.5 4.89175 9.10825 4.5 8.625 4.5H5.5V6.25Z" fill="#0042aa"></path> </g></svg>
     </button>
@@ -1868,7 +1868,7 @@ console.log(htmlout)
 var loggedname = localStorage.getItem("loggedname");
 console.log(loggedname)
 var formname = document.getElementById("Form Name").value;
-var formdescrip = document.getElementById("Form Description").textContent;
+var formdescrip = document.getElementById("Form Description").innerHTML;
 var bulidupdetail = await gethtmldata();
 var bulidupdetails = JSON.stringify(bulidupdetail);
 console.log(formname+"=sheetid="+loggedname+"=sheetid="+"Created"+"=sheetid="+formdescrip+"=sheetid="+htmlout+"=sheetid="+htmlheads+"=sheetid="+formfolder+"=sheetid="+folderids)
